# terminux

./: .gitignore  Cargo.toml  README.md
data/: terminux.desktop
src/: app.rs  main.rs  style.css  window.rs
src/config/: settings.rs
src/ssh/: connection.rs  mod.rs  sftp.rs
src/storage/: database.rs  mod.rs  session_store.rs
src/ui/: file_browser.rs  matrix_rain.rs  mod.rs  session_dialog.rs  session_list.rs  terminal_view.rs
